[tool.poetry]
name = "courier-client-py"
version = "0.1.0.dev"
description = ""
authors = ["Peter McClonski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
